Fixes for generateIncrement HSC challenges